# syu_practic

./: .gitignore  HELP_command_ubuntu_and_docker_bySyu.txt  README.md  _____testDocument.txt  docker_command.txt  git_cmd.txt  git_command.txt  model  okiko_pcSpec.txt  personal_study_commands.md  python_cmd.txt  python_command.txt  tarminal_cmd.txt  technic.txt  test.md  test2.txt  ubuntu_cmd.txt
SalesAnalysisProcessing/: main.py  process_analysis.py  process_db.py  settings.py
SalesAnalysisProcessing/modules/: __init__.py  process_db.py
cursorPj/app_docker/: Dockerfile
cursorPj/nginx_fastapi/: Dockerfile  docker-compose.yml
eclips_work/python_test/: main.py
project/add_pictureTag/: README.md  main.py  pyproject.toml  tags.json
project/api_test/: conftest.py  test_main.py
project/first_api_flask_docker/: docker-compose.yml  forms.py
project/learning_Howto_docker_debug/: app.py
project/learning_Sales_summary/: .gitignore  README  README.ja.md  docker-compose.dev.yml  pyproject.toml
project/learning_Sales_summary/app/src/: main.py
project/learning_Sales_summary/docker/: Dockerfile  Dockerfile-dev
project/learning_Sales_summary/frontend/: index.html
project/learning_Sales_summary/frontend/styles/: style.css
project/learning_Sales_summary/nginx/: default.conf
project/learning_Sales_summary/tests/: test_analysis.py  test_main.py
project/learning_chat_to_AI/: main.py  pyproject.toml
project/learning_css/: docker-compose.yml
project/learning_docker_debug/: Dockerfile  README  (+2 more)
project/learning_loginprocess/: README.md  main.py  pyproject.toml
project/learning_loginprocess/templates/: login.html
project/learning_openai_connect/backend/: pyproject.toml
project/learning_openai_connect/backend/src/: main.py  reg_menu_order.py  voice_handler.py
project/vuetify-pj-order_control/backend/: main.py  pyproject.toml
project/vuetify-pj-order_control/backend/app/: main.py
project/vuetify-pj-order_control/backend/app/api/: category_api.py  menu_api.py  menulist_api.py  menus.py  order_api.py  orders.py  users.py  voice.py  voice_api.py
project/vuetify-pj-order_control/backend/app/crud/: category_crud.py  crud.py  menu_crud.py  order_crud.py
project/vuetify-pj-order_control/backend/app/database/: database.py
project/vuetify-pj-order_control/backend/app/models/: db.py  model.py  models.py
project/vuetify-pj-order_control/backend/app/schemas/: category_schema.py  menu_schema.py  order_schema.py  schemas.py  voice_schema.py
project/vuetify-pj-order_control/backend/app/service/: fuzzy_matcher.py  voice_handler.py
project/vuetify-pj-order_control/backend/app/utils/: utils.py
project/vuetify-pj-order_control/backend/data/: database.db  menu.json
project/vuetify-pj-order_control/backend/test/: caheck_voice.py  conftest.py  test_category.py  test_mene.py  test_menu.csv  test_menu.py  test_menudata.csv  test_menus.py  test_order.py  test_users.py
sendmail_auto_timer/: autoMail_from_appPass.py  credentials.json  token.json
sukitto/: Untitled.ipynb  practice_jupyterlab.ipynb  practice_plot_tree.py  practice_tree_model.py
(+336 files in other folders)
