[project]
name = "learning-sales-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "fastapi[all]==0.115.12",
    "h11==0.14.0",
    "httpx>=0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pluggy==1.5.0",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "uvicorn==0.34.2",
]
